# Package_Manager

./: Dockerfile  Makefile  README.md
mkpm-sl/: Cargo.toml
mkpm-sl/src/: application.rs  book.rs  cargo_app.rs  clone.rs  lib.rs
mkpm_client/: Cargo.toml  client.toml
mkpm_client/src/: main.rs
mkpm_server/: Cargo.toml
mkpm_server/json/: application.json  books.json  cargo.json  repo.json
mkpm_server/src/: app.rs  clone.rs  install.rs  main.rs  read.rs
