[package]
name = "mkpm-cl"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Client application for MKProject Package Manager"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = {version = "1.16.1", features = ["full"]}
mkpm-sl = {version = "0.1.0", path = "../mkpm-sl"}
structopt = "0.3.26"
toml = "0.5.8"
